# airelogic_tech_test

./: CHALLENGE.md  README.md  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
airelogic_tech_test/: __init__.py  data.json
airelogic_tech_test/core/interfaces/: apibase.py  cli.py  lyricsovh.py  musicbrainz.py
airelogic_tech_test/core/models/: lyricsovh.py  musicbrainz.py
airelogic_tech_test/core/tools/: cli.py  logger.py  lyricsovh.py  musicbrainz.py
airelogic_tech_test/tests/: test_cli.py  test_lyricovh.py  test_musicbrainz.py
docker/: DockerFile  docker-compose.yml
