[tool.poetry]
name = "airelogic_tech_test"
version = "0.0.1"
description = "Tech Test for AireLogic"
authors = ["jim.alcock <jalcock501@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^1.26.9"
requests = "^2.27.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
pydantic = "^1.9.0"
typer = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
